Need to set alternatives in CentOS as well.

--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -213,7 +213,7 @@
     when: java_edition == 'jdk'
 
   become: true
-  when: ansible_os_family == "Debian"
+  when: ansible_os_family != "Darwin"
 
 # ----------------------------------------------------------------------------
 
