Need set alternatives in Debian only.

--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -219,7 +219,7 @@
     when: java_edition == 'jdk'
 
   become: true
-  when: ansible_os_family != "Darwin"
+  when: ansible_os_family == 'Debian'
 
 # ----------------------------------------------------------------------------
 
